Able to delete picturs from json file

--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -5,7 +5,7 @@ html
     meta(charset='UTF-8')
     title Image Gallery
   body
-    img(src=url)
+    img(src=url id=num)
     p= 'Uploaded by' + author
     p= description
 
