Added edit page to each gallery image

--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -3,7 +3,7 @@ html(lang='en')
 html
   head
     meta(charset='UTF-8')
-    title Image Gallery
+    title= author
   body
     img(src=url id=num)
     p= 'Uploaded by ' + author
