--- a/views/edit.pug
+++ b/views/edit.pug
@@ -8,7 +8,7 @@ html
     img(src=url id=num)
     p= 'Uploaded by ' + author
     p= description
-  form(type= 'x-www-form-urlencoded' method='PUT' action='/gallery/' + num)
+  form(type= 'x-www-form-urlencoded' method='put' action='/gallery/' + num)
     | author:
     input(type= "text" name="author")
     | url:
