--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -8,4 +8,10 @@ html
     img(src=url id=num)
     p= 'Uploaded by ' + author
     p= description
+  form( action='/gallery/' + num + '/edit')
+    input(type='submit', value='EDIT')
+  form( method='POST' action='/gallery/' + num)
+    input(type="hidden" name="_method" value="DELETE")
+    input(type='hidden' name="_id" value=num)
+    input(type='submit', value='DELETE')
 
