--- a/views/edit.pug
+++ b/views/edit.pug
@@ -8,7 +8,9 @@ html
     img(src=url id=num)
     p= 'Uploaded by ' + author
     p= description
-  form(type= 'x-www-form-urlencoded' method='put' action='/gallery/' + num)
+  form( method='POST' action='/gallery/' + num)
+    input(type="hidden" name="_method" value="PUT")
+    input(type='hidden' name="_id" value=num)
     | author:
     input(type= "text" name="author")
     | url:
