--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,8 @@ html
     link(rel='stylesheet', href='/css/styles.css')
   body
     h1 Gallery Index
+    a(href="/gallery/new")
+      h2 New Picture
     each picture in pictures
       div(class='row')
         div(class = 'photo')
