--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -1,18 +1,33 @@
 doctype html
 html(lang='en')
-- var count = 0
-html
   head
     meta(charset='UTF-8')
-    title= author
+    title= mainPicture.author
   body
-    img(src=url id=num)
-    p= 'Uploaded by  ' + author
-    p= description
-  form( action='/gallery/' + num + '/edit')
-    input(type='submit', value='EDIT')
-  form( method='POST' action='/gallery/' + num)
-    input(type="hidden" name="_method" value="DELETE")
-    input(type='hidden' name="_id" value=num)
-    input(type='submit', value='DELETE')
+    img(src=mainPicture.url id=mainPicture.id)
+    p= 'Uploaded by  ' + mainPicture.author
+    p= mainPicture.description
+    form( action='/gallery/' + mainPicture.id + '/edit')
+      input(type='submit', value='EDIT')
+    form( method='POST' action='/gallery/' + mainPicture.id)
+      input(type="hidden" name="_method" value="DELETE")
+      input(type='hidden' name="_id" value=mainPicture.id)
+      input(type='submit', value='DELETE')
+    if otherPictures
+      div(class='row')
+        div(class = 'photo')
+          a(href="/gallery/" + otherPictures[0].id)
+            img(src=otherPictures[0].url)
+          h3= 'Uploaded by' + otherPictures[0].author
+        if otherPictures[1]
+          div(class = 'photo')
+            a(href="/gallery/" + otherPictures[1].id)
+              img(src=otherPictures[1].url id=otherPictures[1].id)
+            h3= 'Uploaded by' + otherPictures[1].author
+        if otherPictures[2]
+          div(class = 'photo')
+            a(href="/gallery/" + otherPictures[2].id)
+              img(src=otherPictures[2].url id=otherPictures[2].id)
+            h3= 'Uploaded by' + otherPictures[2].author
+
 
