Added more visuals and added verification

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -21,6 +21,10 @@ $large:'(max-width: 900px)';
 }
 
 body{
+  .line{
+    height:10%;
+    width: 100%;
+  }
   .row{
     display:flex;
     flex-flow:row;
