--- a/views/index.pug
+++ b/views/index.pug
@@ -22,3 +22,4 @@ html
             a(href="/gallery/" + picture[2].id)
               img(src=picture[2].url id=picture[2].id)
             h3= 'Uploaded by' + picture[2].author
+      img(class = 'line' src='./Line-Divider.png')
