--- a/views/login.pug
+++ b/views/login.pug
@@ -7,7 +7,7 @@ html(lang='en')
   body
     form( method='POST' action='/login')
       input(type="text" name="username" value="username")
-      input(type='text' name="password" value="password")
+      input(type='password' name="password" value="password")
       input(type='submit', value='Login')
 
 
