--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -191,6 +191,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+body .line {
+  height: 10%;
+  width: 100%; }
+
 body .row {
   display: flex;
   flex-flow: row;
