Added logout button

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,6 +90,9 @@ body {
     body .row .photo {
       margin-left: 10px;
       margin-right: 10px; }
+      body .row .photo .pik {
+        max-height: 300px;
+        max-width: 400px; }
   body .frame {
     display: flex;
     flex-flow: row;
