--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -51,6 +51,10 @@ body{
     .photo{
       margin-left: 10px;
       margin-right: 10px;
+      .pik{
+        max-height: 300px;
+        max-width: 400px;
+      }
     }
   }
   .frame{
