--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -1,3 +1,5 @@
+-var loginHelp = "location.href = '/" + loginStatus + "'"
+
 doctype html
 html(lang='en')
   head
@@ -5,9 +7,13 @@ html(lang='en')
     title= mainPicture.author
     link(rel='stylesheet', href='/css/styles.css')
   body
+    div(class= 'buttonBar')
+      button(type='button', onclick="location.href='/gallery/new'") New Picture
+      button(type='button', onclick= loginHelp) #{loginStatus.charAt(0).toUpperCase() + loginStatus.slice(1)}
+      button(type='button', onclick="location.href='/'") Home
     div(class = 'frame')
       div(class = 'main')
-        h3(class="mainTitle")= 'Uploaded by  ' + mainPicture.author
+        h3(class="mainTitle")= 'Uploaded by  ' + mainPicture.user.username
         img(src=mainPicture.url id=mainPicture.id)
         h3(class="mainTitle")= mainPicture.description
       if otherPictures
@@ -16,22 +22,22 @@ html(lang='en')
             div(class = 'photo')
               a(href="/gallery/" + otherPictures[0].id)
                 img(class = 'pik' src=otherPictures[0].url)
-              h3= 'Uploaded by' + otherPictures[0].author
+              h3= 'Uploaded by ' + otherPictures[0].user.username
             if otherPictures[1]
               div(class = 'photo')
                 a(href="/gallery/" + otherPictures[1].id)
                   img(class = 'pik' src=otherPictures[1].url id=otherPictures[1].id)
-                h3= 'Uploaded by' + otherPictures[1].author
+                h3= 'Uploaded by ' + otherPictures[1].user.username
             if otherPictures[2]
               div(class = 'photo')
                 a(href="/gallery/" + otherPictures[2].id)
                   img(class = 'pik' src=otherPictures[2].url id=otherPictures[2].id)
-                h3= 'Uploaded by' + otherPictures[2].author
+                h3= 'Uploaded by ' + otherPictures[2].user.username
     form( action='/gallery/' + mainPicture.id + '/edit')
       input(type='submit', value='EDIT')
     form( method='POST' action='/gallery/' + mainPicture.id)
       input(type="hidden" name="_method" value="DELETE")
-      input(type='hidden' name="_id" value=mainPicture.id)
+      input(type='hidden' name="_id" value= mainPicture.id)
       input(type='submit', value='DELETE')
 
 
