--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -22,7 +22,7 @@ $large:'(max-width: 900px)';
 
 body{
   .pik{
-    max-height: 300px;
+    max-height: 250px;
     max-width: 400px;
   }
   text-decoration: none;
@@ -30,6 +30,13 @@ body{
     display:flex;
     flex-direction: row;
     justify-content: center;
+    button{
+      width: 22.5%;
+    }
+    button:hover{
+      border-style: solid;
+      border-width: thick;
+    }
   }
   .textHeader{
     display:flex;
@@ -55,6 +62,10 @@ body{
     .photo{
       margin-left: 10px;
       margin-right: 10px;
+    }
+    .pik:hover{
+      border-style: solid;
+      border-width: thick;
     }
   }
   .frame{
