Fixed gallery post for the 2 tables

--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -13,7 +13,7 @@ html(lang='en')
       button(type='button', onclick="location.href='/'") Home
     div(class = 'frame')
       div(class = 'main')
-        h3(class="mainTitle")= 'Uploaded by  ' + mainPicture.user.username
+        h3(class="mainTitle")= 'Uploaded by  ' + mainPicture.username
         img(src=mainPicture.url id=mainPicture.id)
         h3(class="mainTitle")= mainPicture.description
       if otherPictures
@@ -22,17 +22,17 @@ html(lang='en')
             div(class = 'photo')
               a(href="/gallery/" + otherPictures[0].id)
                 img(class = 'pik' src=otherPictures[0].url)
-              h3= 'Uploaded by ' + otherPictures[0].user.username
+              h3= 'Uploaded by ' + otherPictures[0].username
             if otherPictures[1]
               div(class = 'photo')
                 a(href="/gallery/" + otherPictures[1].id)
                   img(class = 'pik' src=otherPictures[1].url id=otherPictures[1].id)
-                h3= 'Uploaded by ' + otherPictures[1].user.username
+                h3= 'Uploaded by ' + otherPictures[1].username
             if otherPictures[2]
               div(class = 'photo')
                 a(href="/gallery/" + otherPictures[2].id)
                   img(class = 'pik' src=otherPictures[2].url id=otherPictures[2].id)
-                h3= 'Uploaded by ' + otherPictures[2].user.username
+                h3= 'Uploaded by ' + otherPictures[2].username
     form( action='/gallery/' + mainPicture.id + '/edit')
       input(type='submit', value='EDIT')
     form( method='POST' action='/gallery/' + mainPicture.id)
